--- a/AnderoTest_461/Views/Tasks/Edit.cshtml
+++ b/AnderoTest_461/Views/Tasks/Edit.cshtml
@@ -36,7 +36,7 @@
 		<div class="form-group">
 			@Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
-				@Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+				<input id="Expired" asp-for="@Model.Created" type="datetime-local" value="@Model.Created.ToLocalTime().ToString("yyyy-MM-dd HH:mm")" class="form-control" />
 				@Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
 			</div>
 		</div>
@@ -44,19 +44,20 @@
 		<div class="form-group">
 			@Html.LabelFor(model => model.Modified, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
-				@Html.EditorFor(model => model.Modified, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+				<div class="col-md-5">
+					<input id="Expired" asp-for="@Model.Modified" type="datetime-local" value="@Model.Modified.ToLocalTime().ToString("yyyy-MM-dd HH:mm")" class="form-control" />
+				</div>
+				<div class="col-md-5">
+					<input id="Expired" asp-for="@Model.Modified" type="datetime-local" value="@Model.Modified.ToLocalTime().ToString("yyyy-MM-dd HH:mm")" class="form-control" />
+				</div>
 				@Html.ValidationMessageFor(model => model.Modified, "", new { @class = "text-danger" })
 			</div>
-		</div>
+			</div>
 
 		<div class="form-group">
 			@Html.LabelFor(model => model.Expired, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
-
-				@*@Html.EditorFor(model => model.Expired, new { htmlAttributes = new { @class = "form-control" } })*@
-				
 				<input id="Expired" asp-for="@Model.Expired" type="datetime-local" value="@Model.Expired.ToLocalTime().ToString("yyyy-MM-dd HH:mm")" class="form-control" />
-				
 				@Html.ValidationMessageFor(model => model.Expired, "", new { @class = "text-danger" })
 			</div>
 		</div>
